--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "axios": "^0.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router": "^6.0.1",
+    "react-router-dom": "^6.0.1",
     "react-scripts": "^4.0.3"
   },
   "scripts": {
