--- a/mobile/package.json
+++ b/mobile/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.11",
     "@react-navigation/native": "^6.0.6",
     "axios": "^0.24.0",
     "expo": "~43.0.2",
