--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^16.12.0",
     "react-router": "^6.0.1",
     "react-router-dom": "^6.0.1",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "socket.io-client": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
