--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.12.3",
     "multer": "^1.4.3",
-    "routes": "^2.1.0"
+    "routes": "^2.1.0",
+    "socket.io": "^4.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
