--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "mongoose": "^5.12.3",
     "multer": "^1.4.3",
     "routes": "^2.1.0",
-    "socket.io": "^4.3.2"
+    "socket.io": "^4.3.2",
+    "socket.io-client": "^4.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
